<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="secFilm"
            type="com.eccard.starwarscharacters.data.model.Film" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >

        <androidx.core.widget.NestedScrollView
            android:id="@+id/film_detail_scroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_film_complete_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@{secFilm.completeName}"
                        tools:text="Star Wars dfdf"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/launch_date"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_film_launch_date"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@{secFilm.launchDate}"
                        tools:text="1977-05-12"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        android:text="@string/director"

                        />

                    <TextView
                        android:id="@+id/tv_film_detail_director"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@{secFilm.director}"
                        tools:text="aflkjaskfasdfasdfasd"/>
                </TableRow>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    android:text="@string/synopsis"
                    />

                <TextView
                    android:id="@+id/tv_film_deails_synopsis"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:text="@{secFilm.synopsis}"/>

                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    android:text="@string/characters_in_film"
                    />


                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rv_characters_in_film"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="8dp"
                    app:layoutManager="LinearLayoutManager"
                    tools:listitem="@layout/film_item"/>
            </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
</layout>
