<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data>
        <variable
            name="secCharacter"
            type="com.eccard.starwarscharacters.data.model.Charactter" />
        <variable
            name="secFilmsOfCharacter"
            type="String" />
    </data>

    <androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/cardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        >

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:paddingBottom="16dp"
            android:paddingRight="8dp"
            android:paddingLeft="8dp"
            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_character_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@{secCharacter.name}"
                        tools:text="olasfsafas"/>

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/character_type"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        />

                    <TextView
                        android:id="@+id/tv_character_main"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:text="@{ secCharacter.main ? @string/main_character :  @string/main_character}"
                        tools:text="olasfsafas"/>

                </TableRow>


                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    >

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                        android:textStyle="bold"
                        android:text="@string/gender"

                        />

                    <TextView
                        android:id="@+id/tv_character_gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:layout_marginStart="8dp"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@{secCharacter.gender}"
                        tools:text="aflkjaskfasdfasdfasd"/>
                </TableRow>

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="16dp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                    android:textStyle="bold"
                    android:text="@string/appearances"
                    />

                <TextView
                    android:id="@+id/tv_character_appearances_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:text="@{secFilmsOfCharacter}"
                    android:textAlignment="center"
                    tools:text="Star Wars: Episode IV \n A New Hope (1977)\n\n Star Wars: Episode V \n The Empire Strikes Back (1980)\n\n Star Wars: Episode VI \n Return of the Jedi (1983)\n\n"/>

            </LinearLayout>
        </ScrollView>

    </androidx.cardview.widget.CardView>

</layout>
